Fix serialization of css-wide keywords in custom properties

Serialize css-wide keywords in custom properties by prefixing
it with a space character and then serialing the keyword
itself (inherit/initial/unset).

BUG=632242

Review-Url: https://codereview.chromium.org/2188343002
Cr-Commit-Position: refs/heads/master@{#408655}

Former-commit-id: fffdf72e66e5aadec1c74bbbb7f4b60d4c629cfa